--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   share: ^0.6.4+3
   sqflite: ^1.3.1
   audioplayers: ^0.13.0
+  group_radio_button: ^1.0.1
+  bubble: ^1.1.9+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
